code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_17.wast
(assert_invalid
  (module (func $type-value-i32-vs-void
    (block (i32.const 1))
  ))
  "type mismatch"
)